--- a/source/App.css
+++ b/source/App.css
@@ -9,6 +9,10 @@
 .itemName
 {
 	font-size:1.25em;
+	display:inline-block;
+	vertical-align:middle;
+	margin:4px 6px 5px;
+	box-sizing:border-box;
 }
 
 .itemDetails
@@ -27,4 +31,15 @@ input
 {
 	color:black;
 	background:white;
+}
+
+.slm-progress-button-client
+{
+	display: inline-block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0px;
+	margin-left: 8px;
+	margin-right: 8px;
 }
