--- a/source/App.css
+++ b/source/App.css
@@ -43,3 +43,16 @@ input
 	margin-left: 8px;
 	margin-right: 8px;
 }
+
+.rowbutton
+{
+	width:100%;
+}
+
+.enyo-panels > *
+{
+	background-color:#EAEAEA;
+	box-shadow:-4px 0px 4px rgba(0,0,0,0.3);
+	-webkitbox-shadow:-4px 0px 4px rgba(0,0,0,0.3);
+	-moz-box-shadow:-4px 0px 4px rgba(0,0,0,0.3);
+}
