--- a/source/App.css
+++ b/source/App.css
@@ -108,34 +108,58 @@ input
 	background-color:rgba(0,0,0,0.1);
 }
 
-.divider .divider-letter, .divider .divider-line, .divider .divider-label
+.divider .divider-letter, .divider .divider-line
 {
 	background-color:#F79A42;
-	border-top:2px solid rgba(0,0,0,0.2);
-	border-bottom:2px solid rgba(255,255,255,0.5);
+	border-top:1px solid rgba(0,0,0,0.4);
+	border-bottom:1px solid rgba(255,255,255,0.7);
 	vertical-align:middle;
 	position:relative;
 }
 .divider-label, .divider-letter
 {
-	line-height:1.25em;
+	line-height:30px;
 	text-align:center;
-	border-radius:0.75em;
-	margin:0em -0.5em 0em -0.5em;
-	padding-left:0.5em;
-	padding-right:0.5em;
+	border-radius:15px;
 	z-index:2;
-	height:1.5em !important;
+	height:30px !important;
 }
 .divider-letter
 {
-	width:1.5em;
+	width:30px;
 	padding:0em;
+	color:black;
+	margin:0px -10px;
+}
+
+.divider-label
+{
+	margin:0em 0.5em;
+	text-shadow: 0px 1px 1px #fff, 0px -1px -1px #000;
+	color:#B77231;
+	font-size:0.8em;
 }
 
 .divider-line
 {
 	width:2em;
-	height:8px !important;
+	height:6px !important;
 	z-index:1;
+}
+
+.divider-line.left
+{
+	border-radius: 0px 3px 3px 0px;
+}
+.divider-line.right
+{
+	border-radius: 3px 0px 0px 3px;
+}
+
+.onyx-submenu > *
+{
+	border-top:1px solid rgba(0,0,0,0.6);
+	border-bottom:1px solid rgba(255,255,255,0.2);
+	padding-left:0.5em;
+	background-color:rgba(255,255,255,0.2);
 }
